feat: create business card

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "geovanasilva",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "index.js",
   "bin": {
-    "geovanasilva": "card.js"
+    "geovanasilva": "./bin/card.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
